syntax = "proto2";

package vct.col.ast;

import "scalapb/scalapb.proto";
import "vct/col/ast/BigInt.proto";

option (scalapb.options) = {
  lenses: false
  getters: false
  no_default_values_in_constructor: true
  package_name: "vct.col.ast.serialize"
};

message BigDecimal {
  required int32 scale = 1;
  required BigInt unscaledValue = 2;
}